Ordinal And Label Encoding

--- a/21May_ML_assignment.ipynb
+++ b/21May_ML_assignment.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "|Ordinal Encoding | Lable Encoding | \n",
     "|-----------------|----------------|\n",
-    "|`oridinal encoding` assigns ranking by defualt | while `label Encoding` gives you the opportunaty to assign ranking according to your need|\n",
+    "|`oridinal encoding` assigns ranking by defualt | while `Label Encoding` gives you the opportunaty to assign ranking according to your need|\n",
     "|`Ordinal Encoding` |\n"
    ]
   },
