Exploratry data analysis

--- a/21May_ML_assignment.ipynb
+++ b/21May_ML_assignment.ipynb
@@ -6,14 +6,15 @@
    "source": [
     "# **Q1. What is the difference between Ordinal Encoding and Label Encoding? Provide an example of when you might choose one over the other.**\n",
     "\n",
-    "***\n",
-    "- ## **ANS---->** :\n",
-    "One of the measure difference between the ordinal encoding and label encoding is as follows :\n",
+    "- ### **ANS---->** : One of the measure difference between the ordinal encoding and label encoding is as follows :\n",
     "\n",
     "|Ordinal Encoding | Lable Encoding | \n",
     "|-----------------|----------------|\n",
+    "|`Ordinal Encoding`assign unique integer values to each category in categorical variable, preserving the order of the categories. |`Lable Encoding` assigns unique integer values to each category in a categorical variable but the order the categories not preserved.|\n",
+    "|*Example* : if a categorical variable has 3 categories, and ordinal encoding is used, than the value 1,2 and 3 might br assigned to the categories | *Example* : if a cetegoriacal variable has 3 categoris, and label encoding is used than the values 0,1 and 2 might be assigned to the categories. |\n",
     "|`oridinal encoding` assigns ranking by defualt | while `Label Encoding` gives you the opportunaty to assign ranking according to your need|\n",
-    "|`Ordinal Encoding` |\n"
+    "\n",
+    "***"
    ]
   },
   {
@@ -23,7 +24,9 @@
     "\n",
     "# **Q2. Explain how Target Guided Ordinal Encoding works and provide an example of when you might use it in a machine learning project.**\n",
     "\n",
-    "***\n"
+    "**ANS :-** Target guided ordinal encoding is a more advanced technique than ordinal encoding or label encoding. It takes into account the target variable when assigning integer values to the categories. This means that the integer values assigned to the categories will reflect the relationship between the categories and the target variable. For example, if the target variable is price, and the categories are ordered in ascending order from cheap to expensive, then the integer values assigned to the categories will also be in ascending order from cheap to expensive. \n",
+    "\n",
+    "***"
    ]
   },
   {
