--- a/24Mar_ML_assignment.ipynb
+++ b/24Mar_ML_assignment.ipynb
@@ -230,17 +230,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                       Non-Null Count  Dtype \n",
+      "---  ------                       --------------  ----- \n",
+      " 0   gender                       1000 non-null   object\n",
+      " 1   race_ethnicity               1000 non-null   object\n",
+      " 2   parental_level_of_education  1000 non-null   object\n",
+      " 3   lunch                        1000 non-null   object\n",
+      " 4   test_preparation_course      1000 non-null   object\n",
+      " 5   math_score                   1000 non-null   int64 \n",
+      " 6   reading_score                1000 non-null   int64 \n",
+      " 7   writing_score                1000 non-null   int64 \n",
+      "dtypes: int64(3), object(5)\n",
+      "memory usage: 62.6+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings('ignore')\n"
+    "warnings.filterwarnings('ignore')\n",
+    "encoder = OneHotEncoder()\n",
+    "\n",
+    "df = pd.read_csv(\"./Datasets/stud.csv\")\n",
+    "df.head(2)\n",
+    "df.info()\n",
+    "# there are five categorical variable we have to covert them into numerical variable \n",
+    "\n",
+    "encoded = encoder.fit_transform(df[['gender', 'race_ethnicity', 'parental_level_of_education', 'lunch','test_preparation_course']]).toarray()\n",
+    "\n"
    ]
   },
   {
