19 Mar Attempt one

--- a/19Mar_AssQ.ipynb
+++ b/19Mar_AssQ.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "       [0.44444444, 0.41666667, 0.69491525, 0.70833333]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "       [0.69025916, 0.35097923, 0.5966647 , 0.21058754]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q4. What is the relationship between PCA and Feature Extraction, and how can PCA be used for Feature Extraction? Provide an example to illustrate this concept.\n",
+    "# **Q4. What is the relationship between PCA and Feature Extraction, and how can PCA be used for Feature Extraction? Provide an example to illustrate this concept.**\n",
+    "\n",
+    "\n",
+    "**ANS :** \n",
+    "PCA is a technique used to for feature extraction , using PCA we perform dimensinlity reduction , by ploting an orthogonal lines , suppose we have two features from House prices dataset like \"NO. of Rooms\", \"Size of the House\" and we plot them into two dimensinal graph ,so what pca can do is create an orthogonal line in a such a way that we can capture the most of the datapoint, and remaining datapoint are ploted on that line , by using this technique we can capture the most of the datapoints and convert them into new feature and use it for the training of the machine learing model .\n",
+    "\n",
+    "PCA play's an majot role while doing feature extraction , where sometimes while doing feature extraction we neglect some features and that can cause a datalose that can be imortant for our model to train, to overcome this  we can use the PCA technique which combines the datapoint from both of the features , and can reduce the data loss \n",
+    "\n",
+    "![PCA graph](https://programmathically.com/wp-content/uploads/2021/08/pca-2-dimensions-1024x644.png 'PCA')\n",
+    "\n",
+    "\n",
     "\n",
     "***\n"
    ]
@@ -432,7 +442,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q5. You are working on a project to build a recommendation system for a food delivery service. The dataset contains features such as price, rating, and delivery time. Explain how you would use Min-Max scaling to preprocess the data.\n",
+    "# **Q5. You are working on a project to build a recommendation system for a food delivery service. The dataset contains features such as price, rating, and delivery time. Explain how you would use Min-Max scaling to preprocess the data.**\n",
+    "\n",
+    "so from the above context i have project to build a recomandation system feo a food delivery services , and the dataset cantains features such as `price ,rating and delivery time`, Here is how can perform minmax scaling on them \n",
+    "***\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.43859649, 0.625     , 0.5       ],\n",
+       "       [0.        , 0.25      , 0.25      ],\n",
+       "       [1.        , 1.        , 1.        ],\n",
+       "       [0.24366472, 0.        , 0.75      ],\n",
+       "       [0.07407407, 0.875     , 0.        ]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "Scaler  = MinMaxScaler()\n",
+    "\n",
+    "data = {\n",
+    "    'price': [12.99, 8.49, 18.75, 10.99, 9.25],\n",
+    "    'rating': [4.5, 4.2, 4.8, 4.0, 4.7],\n",
+    "    'delivery_time_minutes': [30, 25, 40, 35, 20]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "Scaler.fit_transform(df)\n",
+    "\n",
+    "#  And that how we can perform minmax scaling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Q6. You are working on a project to build a model to predict stock prices. The dataset contains many features, such as company financial data and market trends. Explain how you would use PCA to reduce the dimensionality of the dataset.**\n",
+    "\n",
+    "\n",
+    "**ANS:**\n",
+    "from the above context we have to perform dimensionality  reduction using the PCA , for that we created a dataset cantaning the above feature and use them to perform PCA\n",
+    "\n",
+    "1. **Understand the Dataset:**\n",
+    "   Begin by thoroughly understanding the dataset and the features it contains. These features might include metrics related to company financials (revenue, earnings, debt, etc.) and market trends (volume, volatility, indices, etc.). \n",
+    "\n",
+    "2. **Data Preprocessing:**\n",
+    "   Prepare the dataset by cleaning, normalizing, and standardizing the features. This step ensures that the features are on similar scales, which is crucial for PCA to work effectively.\n",
+    "\n",
+    "3. **Feature Selection and Correlation Analysis:**\n",
+    "   Before applying PCA, you may want to perform feature selection to eliminate any irrelevant or redundant features. Also, check for strong correlations between features, as PCA assumes that features are orthogonal (uncorrelated). If two features are highly correlated, it might make sense to remove one of them to prevent multicollinearity issues.\n",
+    "\n",
+    "4. **Applying PCA:**\n",
+    "   Apply PCA to the preprocessed dataset. PCA aims to transform the original features into a new set of uncorrelated variables called principal components. These components are linear combinations of the original features, ordered in decreasing order of the variance they explain.\n",
+    "\n",
+    "5. **Determining the Number of Components:**\n",
+    "   Analyze the variance explained by each principal component. You can plot a scree plot or a cumulative explained variance plot to decide how many components to retain. Retaining a sufficient percentage of the total variance (e.g., 95% or 99%) is often a common criterion for choosing the number of components.\n",
+    "\n",
+    "6. **Dimensionality Reduction:**\n",
+    "   Select the appropriate number of principal components based on the explained variance criterion. These components will be used as the new, reduced-dimensional representation of your data.\n",
+    "\n",
+    "7. **Model Building:**\n",
+    "   With the reduced-dimensional dataset obtained from PCA, you can proceed to build your stock price prediction model. You can use various machine learning algorithms, such as regression, time series analysis, or deep learning, depending on the nature of your data and the specific prediction task.\n",
+    "\n",
+    "8. **Validation and Tuning:**\n",
+    "   Evaluate the performance of your prediction model using appropriate validation techniques. If needed, tune the model's hyperparameters to achieve the best results.\n",
+    "\n",
+    "By using PCA, you're effectively transforming the original dataset into a more manageable set of features that captures the most significant variance in the data. This can help mitigate the curse of dimensionality and potentially improve the performance of your stock price prediction model. However, it's important to note that PCA might not always lead to better results, and its effectiveness depends on the characteristics of your data and the prediction task at hand.\n",
     "\n",
     "***\n"
    ]
@@ -441,27 +532,224 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q6. You are working on a project to build a model to predict stock prices. The dataset contains many features, such as company financial data and market trends. Explain how you would use PCA to reduce the dimensionality of the dataset.\n",
+    "# **Q7. For a dataset containing the following values: [1, 5, 10, 15, 20], perform Min-Max scaling to transform the values to a range of -1 to 1.**\n",
+    "\n",
+    "**ANS :**\n",
+    "Here's how we can transform the dataset using min-max scaling the values to a range of -1 to 1\n",
     "\n",
     "***\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.        ],\n",
+       "       [-0.57894737],\n",
+       "       [-0.05263158],\n",
+       "       [ 0.47368421],\n",
+       "       [ 1.        ]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler(feature_range=(-1,1))\n",
+    "data =  [1, 5, 10, 15, 20]\n",
+    "\n",
+    "df = pd.DataFrame({'values': data})\n",
+    "\n",
+    "scaler.fit_transform(df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q7. For a dataset containing the following values: [1, 5, 10, 15, 20], perform Min-Max scaling to transform the values to a range of -1 to 1.\n",
-    "\n",
-    "***\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Q8. For a dataset containing the following features: [height, weight, age, gender, blood pressure], perform Feature Extraction using PCA. How many principal components would you choose to retain, and why?\n",
+    "# **Q8. For a dataset containing the following features: [height, weight, age, gender, blood pressure], perform Feature Extraction using PCA. How many principal components would you choose to retain, and why?**\n",
     "\n",
     "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>age</th>\n",
+       "      <th>Blood prasure</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>154.60</td>\n",
+       "      <td>55.17</td>\n",
+       "      <td>24</td>\n",
+       "      <td>165.17</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>174.36</td>\n",
+       "      <td>74.51</td>\n",
+       "      <td>25</td>\n",
+       "      <td>107.18</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>155.34</td>\n",
+       "      <td>52.24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>154.79</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>159.62</td>\n",
+       "      <td>65.58</td>\n",
+       "      <td>56</td>\n",
+       "      <td>114.42</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>163.09</td>\n",
+       "      <td>87.60</td>\n",
+       "      <td>49</td>\n",
+       "      <td>143.98</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   height  weight  age  Blood prasure  gender\n",
+       "0  154.60   55.17   24         165.17    male\n",
+       "1  174.36   74.51   25         107.18    male\n",
+       "2  155.34   52.24   23         154.79    male\n",
+       "3  159.62   65.58   56         114.42  female\n",
+       "4  163.09   87.60   49         143.98  female"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.decomposition import PCA\n",
+    "import warnings \n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "np.random.seed(43)\n",
+    "\n",
+    "pca = PCA()\n",
+    "\n",
+    "# creating a dataset\n",
+    "data = {\n",
+    "    'height' : np.around(np.random.uniform(150,190 , 100),2),\n",
+    "    'weight' : np.around(np.random.uniform(50,100 , 100),2),\n",
+    "    'age' : np.random.randint(15,70 , 100),\n",
+    "    'Blood prasure' : np.around(np.random.uniform(90,190 , 100),2),\n",
+    "    'gender' : np.random.choice(['male','female'] ,size= 100),\n",
+    "     \n",
+    "}\n",
+    "\n",
+    "df_1 = pd.DataFrame(data)\n",
+    "df_1.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data encoding\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "encoder = OneHotEncoder()\n",
+    "encoded = encoder.fit_transform(df_1[['gender']])\n",
+    "df_2=pd.DataFrame(encoded.toarray(),columns=encoder.get_feature_names_out())\n",
+    "df_1 = pd.concat([df_1,df_2],axis=1)\n",
+    "df_1.drop('gender',inplace=True,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **To determine how many principal components to retain, we typically look at the explained variance ratio. This ratio tells us the proportion of the total variance in the data that is explained by each principal component. Generally, we aim to retain enough principal components to explain a significant portion of the total variance while discarding those components that contribute very little.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Ratio: [0.58427786 0.17398735 0.15289372 0.08884107]\n",
+      "Cumulative Explained Variance Ratio: [0.58427786 0.75826522 0.91115893 1.        ]\n",
+      "Number of Principal Components to Retain: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit PCA on the dataset\n",
+    "pca.fit(df_1.drop([ 'gender_female', 'gender_male'], axis=1))  # Removing the original 'gender' and encoded columns\n",
+    "\n",
+    "# Calculate explained variance ratio\n",
+    "explained_variance_ratio = pca.explained_variance_ratio_\n",
+    "\n",
+    "# Calculate cumulative explained variance\n",
+    "cumulative_variance_ratio = np.cumsum(explained_variance_ratio)\n",
+    "\n",
+    "# Determine the number of principal components to retain\n",
+    "num_components_to_retain = np.argmax(cumulative_variance_ratio >= 0.95) + 1\n",
+    "\n",
+    "print(\"Explained Variance Ratio:\", explained_variance_ratio)\n",
+    "print(\"Cumulative Explained Variance Ratio:\", cumulative_variance_ratio)\n",
+    "print(\"Number of Principal Components to Retain:\", num_components_to_retain)\n"
    ]
   }
  ],
