18 Mar Attempt one

--- a/19Mar_AssQ.ipynb
+++ b/19Mar_AssQ.ipynb
@@ -751,6 +751,13 @@
     "print(\"Cumulative Explained Variance Ratio:\", cumulative_variance_ratio)\n",
     "print(\"Number of Principal Components to Retain:\", num_components_to_retain)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**In this example, we calculate the explained variance ratio and cumulative explained variance ratio. We then choose to retain principal components until the cumulative explained variance exceeds 95%. The reason for choosing 95% is somewhat arbitrary but is a common threshold used to retain a substantial amount of variance while reducing dimensionality.**"
+   ]
   }
  ],
  "metadata": {
